--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ jobs:
   build_test_deploy:
     machine: true
     environment:
-      SBT_VERSION_TAG: sbt-0.13.15_mongo-3.2.17_node-8.x_jdk-8
       USER_NAME: circleci
       USER_UID: 1001
       USER_GID: 1001
@@ -12,7 +11,7 @@ jobs:
       - checkout
       - run:
           name: Pull sbt docker image
-          command: docker pull scalableminds/sbt:$SBT_VERSION_TAG
+          command: docker-compose pull base
       - run:
           name: Prepare dependency folders
           command: mkdir -p ~/.m2 ~/.ivy2 ~/.sbt ~/.yarn-cache
@@ -45,13 +44,13 @@ jobs:
       - run:
           name: Build webknossos docker image
           command: |
-            docker build --pull -t scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
+            DOCKER_TAG=${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} docker-compose build --pull webknossos
 
       - run:
           name: Build webknossos-datastore docker image
           command: |
             cd webknossos-datastore
-            docker build --pull -t scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} .
+            DOCKER_TAG=${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} docker-compose build --pull webknossos-datastore
 
       - run:
           name: Lint frontend code
