--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
             docker-compose down --volumes --remove-orphans
 
       - run:
-          name: Deploy docker images
+          name: Push docker images
           command: |
             set -x
             docker login -u $DOCKER_USER -p $DOCKER_PASS
