--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,18 +87,22 @@ jobs:
             curl --retry 3 --max-time 15 -v http://localhost:9090/data/health
             docker-compose down --volumes --remove-orphans
 
-      # - run:
-      #     name: Deploy docker images
-      #     command: |
-      #       set -x
-      #       docker login -u $DOCKER_USER -p $DOCKER_PASS
-      #       docker tag scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} scalableminds/webknossos:${CIRCLE_BRANCH}
-      #       docker push scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
-      #       docker push scalableminds/webknossos:${CIRCLE_BRANCH}
-      #       docker tag scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
-      #       docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
-      #       docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
-      #       docker logout
+      - run:
+          name: Push docker images
+          command: |
+            set -x
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker tag \
+              scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} \
+              scalableminds/webknossos:${CIRCLE_BRANCH}
+            docker tag \
+              scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM} \
+              scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
+            docker push scalableminds/webknossos:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
+            docker push scalableminds/webknossos:${CIRCLE_BRANCH}
+            docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}__${CIRCLE_BUILD_NUM}
+            docker push scalableminds/webknossos-datastore:${CIRCLE_BRANCH}
+            docker logout
 
 workflows:
   version: 2
